# ChangeLog for app-misc/galileo
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Apr 2014; Stuart Hickinbottom <stuart@hickinbottom.com>
  galileo-0.4_pre20140222.ebuild, galileo-0.4_pre20140326.ebuild:
  Fixed license for app-mixed/galileo

*galileo-0.4_pre20140326 (26 Mar 2014)

  26 Mar 2014; Stuart Hickinbottom <stuart@hickinbottom.com>
  +galileo-0.4_pre20140326.ebuild, +files/galileorc-2,
  +files/gentoo-no-tests.patch:
  Added new 0.4dev ebuild snapshot for 2014-03-26
